# compair

./: .env  .gitignore  README.md  package-lock.json  pyproject.toml
compair/: __init__.py  __main__.py  app.py  llm.py  models.py  pipelines.py  preprocessing.py
compair/prompts/: systen_prompt_llm_heavy.md  systen_prompt_llm_light.md  systen_prompt_llm_only.md
tests/: test_api.py  test_llm.py  test_preprocessing.py
web-viewer/: index.html  package.json  tsconfig.json
web-viewer/src/: App.css  App.tsx  index.css  models.ts  vite-env.d.ts
web-viewer/src/components/: ChangeCard.tsx  DiffViewer.tsx  LineRenderer.tsx
web-viewer/src/utils/: diffUtils.ts
